# substrate-contracts-node

./: Cargo.toml  metadata.json  metadata.scale
examples/: Cargo.toml
examples/examples/: upload.rs
integration-tests/: Cargo.toml
integration-tests/src/: balance.rs  events.rs  extrinsics.rs  lib.rs  upload.rs
node/: Cargo.toml
pallets/account-abstraction/: Cargo.toml
pallets/account-abstraction/primitives/: Cargo.toml
pallets/account-abstraction/primitives/src/: lib.rs
pallets/account-abstraction/src/: exec.rs  lib.rs  tests.rs  weights.rs
pallets/account-abstraction/src/wasm/: mod.rs
primitives/: Cargo.toml
primitives/src/: lib.rs  unchecked_extrinsic.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
