[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
contract-metadata = "2.1.0"
contract-build = "2.1.0"
contract-transcode = "2.1.0"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
  "full",
  "bit-vec",
] }
futures = "0.3.13"
hex = "0.4.3"
# sp-keyring = { git = "https://github.com/lakshya-sky/substrate", package = "sp-keyring", branch = "polkadot-v0.9.34" }
# sp-core = { git = "https://github.com/lakshya-sky/substrate", package = "sp-core", branch = "polkadot-v0.9.34" }
# sp-runtime = { git = "https://github.com/lakshya-sky/substrate", package = "sp-runtime", branch = "polkadot-v0.9.34" }
# sp-weights = { version = "4.0.0", git = "https://github.com/lakshya-sky/substrate", package = "sp-weights", branch = "polkadot-v0.9.34" }
sp-keyring = "23.0.0"
sp-core = { version = "20.0.0", default-features = false }
sp-runtime = "23.0.0"
# subxt = { git = "https://github.com/lakshya-sky/subxt", branch = "master" }
subxt = "0.28.0"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde = { version = "1.0.160", default-features = false, features = ["derive"] }
serde_json = "1.0.96"
url = { version = "2.3.1", features = ["serde"] }
rust_decimal = "1.29"
