[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
  "max-encoded-len",
] }
parity-util-mem = { version = "0.12.0", default-features = false, features = [
  "primitive-types",
], optional = true }
scale-info = { version = "2.1.1", default-features = false, features = [
  "derive",
] }
serde = { version = "1.0.136", features = ["derive"], optional = true }
frame-support = { git = "https://github.com/lakshya-sky/substrate", package = "frame-support", default-features = false, branch = "polkadot-v0.9.34" }
sp-core = { git = "https://github.com/lakshya-sky/substrate", package = "sp-core", default-features = false, branch = "polkadot-v0.9.34" }
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/lakshya-sky/substrate", package = "sp-io", branch = "polkadot-v0.9.34" }
sp-runtime = { git = "https://github.com/lakshya-sky/substrate", package = "sp-runtime", default-features = false, branch = "polkadot-v0.9.34" }
sp-std = { git = "https://github.com/lakshya-sky/substrate", package = "sp-std", default-features = false, branch = "polkadot-v0.9.34" }

[features]
runtime-benchmarks = []
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "parity-util-mem/std",
  "scale-info/std",
  "serde",
  "sp-runtime/std",
  "sp-core/std",
  "sp-io/std",
  "sp-std/std",
]
