[package]
name = "pallet-account-abstraction"
version = "4.0.0-dev"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lakshya-sky/substrate/"
description = "FRAME pallet for WASM contracts"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bitflags = "1.3"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
  "max-encoded-len",
] }
scale-info = { version = "2.1.1", default-features = false, features = [
  "derive",
] }
log = { version = "0.4", default-features = false }
wasm-instrument = { version = "0.4", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
smallvec = { version = "1", default-features = false, features = [
  "const_generics",
] }
wasmi = { version = "0.20", default-features = false }
wasmparser = { package = "wasmparser-nostd", version = "0.91", default-features = false }
impl-trait-for-tuples = "0.2"

# Only used in benchmarking to generate random contract code
rand = { version = "0.8", optional = true, default-features = false }
rand_pcg = { version = "0.3", optional = true }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/lakshya-sky/substrate", package = "frame-benchmarking", version = "4.0.0-dev", default-features = false, optional = true, branch = "polkadot-v0.9.34" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/lakshya-sky/substrate", package = "frame-support", branch = "polkadot-v0.9.34" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/lakshya-sky/substrate", package = "frame-system", branch = "polkadot-v0.9.34" }
pallet-contracts-primitives = { version = "7.0.0", default-features = false, path = "primitives" }
pallet-contracts-proc-macro = { version = "4.0.0-dev", path = "proc-macro" }

sp-api = { git = "https://github.com/lakshya-sky/substrate", package = "sp-api", default-features = false, branch = "polkadot-v0.9.34" }
sp-block-builder = { git = "https://github.com/lakshya-sky/substrate", package = "sp-block-builder", default-features = false, branch = "polkadot-v0.9.34" }
sp-core = { git = "https://github.com/lakshya-sky/substrate", package = "sp-core", default-features = false, branch = "polkadot-v0.9.34" }
sp-inherents = { git = "https://github.com/lakshya-sky/substrate", package = "sp-inherents", default-features = false, branch = "polkadot-v0.9.34" }
sp-offchain = { git = "https://github.com/lakshya-sky/substrate", package = "sp-offchain", default-features = false, branch = "polkadot-v0.9.34" }
sp-runtime = { git = "https://github.com/lakshya-sky/substrate", package = "sp-runtime", default-features = false, branch = "polkadot-v0.9.34" }
sp-session = { git = "https://github.com/lakshya-sky/substrate", package = "sp-session", default-features = false, branch = "polkadot-v0.9.34" }
sp-std = { git = "https://github.com/lakshya-sky/substrate", package = "sp-std", default-features = false, branch = "polkadot-v0.9.34" }
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/lakshya-sky/substrate", package = "sp-io", branch = "polkadot-v0.9.34" }

[dev-dependencies]
array-bytes = "4.1"
assert_matches = "1"
env_logger = "0.9"
pretty_assertions = "1"
wat = "1"

# Substrate Dependencies
pallet-balances = { version = "4.0.0-dev", package = "pallet-balances", git = "https://github.com/lakshya-sky/substrate", branch = "polkadot-v0.9.34" }
pallet-timestamp = { version = "4.0.0-dev", package = "pallet-timestamp", git = "https://github.com/lakshya-sky/substrate", branch = "polkadot-v0.9.34" }
pallet-randomness-collective-flip = { version = "4.0.0-dev", package = "pallet-randomness-collective-flip", git = "https://github.com/lakshya-sky/substrate", branch = "polkadot-v0.9.34" }
pallet-utility = { version = "4.0.0-dev", package = "pallet-utility", git = "https://github.com/lakshya-sky/substrate", branch = "polkadot-v0.9.34" }
sp-keystore = { version = "0.13.0", package = "sp-keystore", git = "https://github.com/lakshya-sky/substrate", branch = "polkadot-v0.9.34" }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "scale-info/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-std/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "wasm-instrument/std",
  "wasmi/std",
  "pallet-contracts-primitives/std",
  "pallet-contracts-proc-macro/full",
  "log/std",
  "rand/std",
  "wasmparser/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "rand",
  "rand_pcg",
]
try-runtime = ["frame-support/try-runtime"]
