[package]
name = "pallet-contracts-primitives"
version = "7.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "A crate that hosts a common definitions that are relevant for the pallet-contracts."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bitflags = "1.0"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
] }

# Substrate Dependencies (This crate should not rely on frame)
sp-runtime = { version = "7.0.0", git = "https://github.com/lakshya-sky/substrate", package = "sp-runtime", default-features = false, branch = "polkadot-v0.9.34" }
sp-std = { version = "5.0.0", git = "https://github.com/lakshya-sky/substrate", package = "sp-std", default-features = false, branch = "polkadot-v0.9.34" }
sp-weights = { version = "4.0.0", git = "https://github.com/lakshya-sky/substrate", package = "sp-weights", default-features = false, branch = "polkadot-v0.9.34" }

[features]
default = ["std"]
std = ["codec/std", "sp-runtime/std", "sp-std/std"]
